# parallelPart

./: .gitignore  CMakeLists.txt  DrawDistribution.py  DrawFFT.py  DrawTime.py  Drawer.py  Drawer_.py  FreqDrawer.py  README.md  configure.sh  formelsammlung_chattopadhyay.tex  job.sh  module_setup  scalings.ods  signal.h5
src/cmake/: FindFFTW.cmake
src/fft/: CMakeLists.txt  main.c
src/parallelPart/: CMakeLists.txt  Compute.c  Compute.h  Destruct.c  Destruct.h  FindADIOS.cmake  Globals.h  Init.c  Init.h  Params.c  Params.h  Prints.h  Save.h  Signal.h  Topdown.txt  main.c  main.cpp
src/python_process_distribution/: CMakeLists.txt  doc.txt  parallel_quicksort.h  process_distribution.c  setup.py.cfg
